--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,7 @@
       <h3>Ich bin ins AppComponent</h3>
 
       <hr>
-      <!--<app-servers></app-servers>-->
-      <!--<div app-servers></div>-->
-      <div class='app-servers'></div>
+      <app-servers></app-servers>
     </div>
   </div>
 </div>
