--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,5 +3,16 @@
 <input type="text" class="form-control" [(ngModel)]="serverName">
 <!--<p>{{ serverName }}</p>-->
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+
+<!-- ngIf with else-->
+<!--
+
+  <p *ngIf="serverCreated;else noServer">Server wurde erstellt, Servername ist {{ serverName }}</p>
+  <ng-template #noServer >
+    <p>Kein Server erstellt</p>
+  </ng-template>
+-->
+<p *ngIf="serverCreated">Server wurde erstellt, Servername ist {{ serverName }}</p>
+<app-server></app-server>
 <app-server></app-server>
